# rayn

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
lib/: BUILD.bazel
lib/headers/: linalg.h  raytracing.h
lib/linalg/: BUILD.bazel
lib/raytracing/: BUILD.bazel
main/: BUILD.bazel
test/: BUILD.bazel  simple_assertions_test.cc
