load("@rules_cc//cc:cc_library.bzl", "cc_library")

package_group(
    name = "rayn_root",
    packages = ["//"],
)

cc_library(
    name = "lib",
    hdrs = glob(["headers/*.h"]),
    strip_include_prefix = "headers",
    include_prefix = "rayn",
    deps = [
        "//lib/linalg",
        "//lib/raytracing",
    ],
    visibility = [
        ":rayn_root",
        "//main:__pkg__",
        "//test:__pkg__",
    ],
)

test_suite(
    name = "lib_unittest",
    tests = [
        "//lib/linalg:linalg_unittest",
        "//lib/raytracing:raytracing_unittest",
    ],
)
