load("@rules_cc//cc:cc_library.bzl", "cc_library")

package_group(
    name = "rayn_root",
    packages = ["//"],
)

cc_library(
    name = "lib",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/linalg",
        "//lib/raytracing",
    ],
)

test_suite(
    name = "lib_unittest",
    tests = [
        "//lib/linalg:linalg_unittest",
        "//lib/raytracing:raytracing_unittest",
    ],
)
