load("@rules_cc//cc:cc_test.bzl", "cc_test")

test_suite(
    name = "test",
    tests = [":simple_assertions"]
)

cc_test(
    name = "simple_assertions",
    size = "small",
    srcs = ["simple_assertions_test.cc"],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
