load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "linalg",
    srcs = glob(["*.cc"]),
    hdrs = glob(["*.h"]),
    visibility = [
        "//lib:__pkg__",
        "//lib/raytracing:__pkg__",
    ],
)

cc_test(
    name = "linalg_unittest",
    size = "small",
    srcs = glob(["*_unittest.cc"]),
    deps = [
        ":linalg",
        "@googletest//:gtest_main",
    ],
)
