load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "linalg",
    srcs = ["matrix.cc"],
    hdrs = ["matrix.h"],
    strip_include_prefix = "",
    include_prefix = "rayn/linalg",
    visibility = ["//visibility:public"],
)

cc_test(
    name = "linalg_unittest",
    size = "small",
    srcs = glob(["*_unittest.cc"]),
    deps = [
        ":linalg",
        "@googletest//:gtest_main",
    ],
)
