load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "raytracing",
    srcs = glob(["*.cc"]),
    hdrs = glob(["*.h"]),
    strip_include_prefix = "",
    include_prefix = "rayn/raytracing",
    visibility = ["//lib:__pkg__"],
    deps = ["//lib/linalg"],
)

cc_test(
    name = "raytracing_unittest",
    size = "small",
    srcs = glob(["*_unittest.cc"]),
    deps = [
        ":raytracing",
        "@googletest//:gtest_main",
    ],
)
